@startuml

title __DESIGN's Class Diagram__\n

  namespace com.cardy.design {
    class com.cardy.design.LoginActivity {
        ~ etPassword : EditText
        ~ etUserId : EditText
        ~ loginButton : TextView
        # onCreate()
    }
  }
  

  namespace com.cardy.design {
    class com.cardy.design.MainActivity {
        ~ intentActivityResultLauncher : ActivityResultLauncher<Intent>
        # onCreate()
        # onStart()
    }
  }
  

  com.cardy.design.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cardy.design.LoginActivity o-- com.cardy.design.viewmodel.UserViewModel : viewModel
  com.cardy.design.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
